--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,7 +1,14 @@
-@import "@/assets/styles/_variables.scss";
+@use "@/assets/styles/_variables.scss";
+@use "@/assets//styles/_mixins.scss";
+@use "@/assets//styles//bases";
 
+// @media screen and (max-width: 1600px) {
+//   .container {
+//     background-color: aqua;
+//   }
+// }
 .topbar {
-  background-color: $primary-color;
+  background-color: variables.$primary-color;
   max-width: 100vw;
   font-size: 13px;
   padding-top: 7px;
@@ -10,7 +17,7 @@
 
 .topbar_bottom {
   margin: 0 auto;
-  color: $secondary-color;
+  color: variables.$secondary-color;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -53,9 +60,9 @@ a:first-child {
 .notice_num {
   width: 16px;
   height: 16px;
-  border: 1px solid $secondary-color;
-  background-color: $notice-number-color;
-  color: $secondary-color;
+  border: 1px solid variables.$secondary-color;
+  background-color: variables.$notice-number-color;
+  color: variables.$secondary-color;
   text-align: center;
   font-size: 10px;
   font-weight: 600;
@@ -75,7 +82,7 @@ a:first-child {
 }
 
 .main_header {
-  background-color: $secondary-color;
+  background-color: variables.$secondary-color;
   font-size: 15px;
   font-weight: 600;
   // background-color: aqua;
@@ -146,15 +153,15 @@ a:first-child {
 }
 
 .search_icon {
-  color: $primary-color;
+  color: variables.$primary-color;
 }
 
 .shoppingcart_number {
   position: absolute;
   width: 20px;
   height: 20px;
-  background-color: $notice-number-color;
-  color: $secondary-color;
+  background-color: variables.$notice-number-color;
+  color: variables.$secondary-color;
   border-radius: 50%;
   text-align: center;
   font-weight: 600;
