--- a/src/assets/styles/_bases.scss
+++ b/src/assets/styles/_bases.scss
@@ -3,11 +3,14 @@
 body {
   font-family: variables.$font-family-primary;
   line-height: 1.6;
+  font-weight: 400;
 }
 
 .container {
   max-width: 1600px;
   padding: 0 50px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .meme1 {
@@ -17,3 +20,7 @@ body {
 .meme2 {
   color: yellow;
 }
+// .hero {
+//   max-width: 3560px;
+//   margin: 0 auto;
+// }
