--- a/src/pages/Home/components/Category/Category.module.scss
+++ b/src/pages/Home/components/Category/Category.module.scss
@@ -1,6 +1,3 @@
-.container {
-}
-
 .slider_category {
   margin-top: 20px;
   max-width: 100%;
@@ -13,8 +10,18 @@
   opacity: 60%;
 }
 
-// .customSlide .slick-slide {
-//   padding: 0 20px;
+.customSlide {
+  display: inline-block;
+  padding-left: 30px;
+}
+
+// .customSlide:first-child {
+//   padding-left: 0;
+// }
+
+// .customSlide:last-child {
+//   padding-right: 0; /* Slide cuối cùng sát viền phải */
+//   padding-left: 30px; /* Giữ khoảng cách với slide trước */
 // }
 
 .slick_prev {
@@ -27,7 +34,9 @@
 
 .categories {
   height: 538px;
-  margin-top: 80px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
 }
 
 .categories_description {
@@ -72,6 +81,8 @@
 }
 
 .category_products {
+  display: flex;
+  flex: 1 1 0;
   position: relative;
   overflow: hidden;
   img {
@@ -91,8 +102,4 @@
   font-weight: 600px;
   color: #000000;
   transition: all 0.3s ease;
-}
-
-.categories_title_heading:hover {
-  color: #d60000;
 }
