--- a/src/components/AddToCart/AddToCart.module.scss
+++ b/src/components/AddToCart/AddToCart.module.scss
@@ -1,7 +1,7 @@
 .addToCart {
   //   max-width: calc(100% - 40px);
   position: relative;
-  max-width: 220px;
+  min-width: 220px;
   max-height: 36px;
   display: flex;
   gap: 10px;
