--- a/src/pages/Home/components/PromotionalProduct/PromotionalProduct.module.scss
+++ b/src/pages/Home/components/PromotionalProduct/PromotionalProduct.module.scss
@@ -1,14 +1,159 @@
-.promotial {
+.wrapperPromotional {
+  min-width: 100vh;
+  background-color: #fff9f9;
+  padding: 60px 0;
+  height: 562px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.promotional {
   position: relative;
-  width: 500px;
-  height: 200px;
-  background-color: orange;
+  height: 800px;
   margin-top: 100px;
-  display: flex;
-  justify-content: space-around;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #fff9f9;
 }
 
+.customArrows {
+  margin: 0 auto;
+}
 .prosale {
   position: absolute;
   z-index: 1;
+}
+
+.slider_promotional {
+  width: 100%;
+  height: 200px;
+  background-color: violet;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.promotionalTitle {
+  height: 50px;
+  min-width: 500px;
+  display: flex;
+  gap: 40px;
+  font-size: 37px;
+  color: black;
+  font-weight: 600;
+  a {
+    transform: translateY(16%);
+  }
+}
+
+.hoverView {
+  margin-top: 16%;
+  text-align: center;
+}
+
+.imageSlide {
+  transition: all 0.3s ease;
+  position: relative;
+}
+
+.imageDetail {
+  max-width: 92%;
+  height: auto;
+  vertical-align: middle;
+}
+
+.bgOverlay {
+  object-fit: cover;
+  height: 100%;
+  width: 90%;
+  position: absolute;
+  inset: 0;
+  opacity: 0;
+  transition: all 1s ease;
+}
+
+.imageSlide:hover {
+  .bgOverlay {
+    opacity: 1;
+    width: 92%;
+  }
+  .AddToCart {
+    opacity: 1;
+  }
+}
+
+.slider_promotional {
+  position: relative;
+}
+.nextIcon {
+  position: absolute;
+  top: -12%;
+  right: 3%;
+  transform: rotate(180deg);
+}
+
+.prevIcon {
+  position: absolute;
+  top: -12%;
+  right: 1%;
+}
+
+.AddToCart {
+  transition: all 0.5s ease;
+  position: absolute;
+  top: 80%;
+  left: 12%;
+  opacity: 0;
+}
+
+.proSale {
+  position: absolute;
+  top: 4%;
+  left: 10%;
+}
+
+.informationDetail {
+  padding: 10px 8px;
+}
+.customSlide:has(.informationDetail:hover) .AddToCart {
+  opacity: 1;
+}
+
+.varialt {
+  color: #000000;
+  display: flex;
+  justify-content: space-between;
+  font-size: 14px;
+}
+
+.titleDetail {
+  line-height: 1.1;
+  margin-top: 8px;
+  font-weight: 500;
+}
+
+.priceDetail {
+  font-size: 14px;
+  margin-top: 6px;
+
+  span:first-child {
+    color: #ff2c26;
+    margin-right: 6px;
+  }
+  span:nth-of-type(2) {
+    position: relative;
+    color: #878c8f;
+  }
+  span:nth-of-type(2)::before {
+    position: absolute;
+    content: "";
+    display: inline-block;
+    width: 60px;
+    height: 2px;
+    background-color: #878c8f;
+    top: 49%;
+  }
+}
+
+.informationDetail {
+  background-color: white;
 }
