--- a/src/assets/styles/_bases.scss
+++ b/src/assets/styles/_bases.scss
@@ -13,14 +13,10 @@ body {
   margin-right: auto;
 }
 
-.meme1 {
-  color: aqua;
-}
+// .meme1 {
+//   color: aqua;
+// }
 
-.meme2 {
-  color: yellow;
-}
-// .hero {
-//   max-width: 3560px;
-//   margin: 0 auto;
+// .meme2 {
+//   color: yellow;
 // }
