--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,6 +1,5 @@
 .WrapperFooter {
   max-width: 100%;
-  height: 600px;
   background-color: #f5f5f5;
 }
 
@@ -80,15 +79,127 @@
     overflow: hidden;
   }
 }
-// .contentTwo {
-//   padding-top: 10px;
-//   padding-bottom: 20px;
-// }
-// .contentThree {
-//   padding-top: 10px;
-//   padding-bottom: 20px;
-// }
-// .contentFour {
-//   padding-top: 10px;
-//   padding-bottom: 20px;
-// }
+.contentTwo {
+  padding-top: 10px;
+  padding-bottom: 20px;
+  b {
+    font-weight: bold;
+  }
+}
+
+.footerInformationContacts {
+  li {
+    font-size: 14px;
+    margin-bottom: 8px;
+  }
+}
+
+.informationShipments {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  p {
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 10px;
+  }
+
+  li {
+    border-radius: 3px;
+    border: 1px solid #dee2e6;
+    margin-right: 8px;
+    margin-bottom: 8px;
+    overflow: hidden;
+  }
+}
+
+.shipMentsImg {
+  display: flex;
+}
+
+.contentThree {
+  padding-top: 10px;
+  padding-bottom: 20px;
+}
+
+.contentThree {
+  li {
+    list-style-type: disc;
+    padding-left: 15px;
+    margin-bottom: 8px;
+    opacity: 1;
+    transition: opacity 0.3s ease;
+    a {
+      font-size: 14px;
+      font-weight: normal;
+    }
+  }
+  li:hover {
+    opacity: 0.3;
+  }
+}
+.contentFour {
+  padding-top: 10px;
+  padding-bottom: 20px;
+  p {
+    font-size: 14px;
+    margin-bottom: 1rem;
+  }
+  input {
+    height: 46px;
+    padding: 10px 130px 10px 40px;
+    border: 1px solid #ffffff;
+    background-color: #ffffff;
+    border-radius: 4px;
+  }
+  form {
+    position: relative;
+  }
+
+  .iconEmail {
+    position: absolute;
+    top: 31%;
+    left: 4%;
+  }
+
+  .buttonEmail {
+    height: 46px;
+    padding: 5px 25px;
+    background-color: #ffffff;
+    border: 1px solid var(--shop-color-button);
+    border-radius: 4px;
+    text-transform: uppercase;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+
+  button {
+    color: #ca0000;
+    cursor: pointer;
+    font-weight: 700;
+    transform: translateY(26%);
+  }
+}
+
+.logo {
+  margin-top: 12px;
+  img {
+    max-width: 150px;
+  }
+}
+
+.copyRight {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border-top: 1px solid #dedede;
+  width: 100%;
+  background-color: #f5f5f5;
+  p {
+    display: flex;
+    justify-content: center;
+    a {
+      font-size: 13px;
+      font-weight: normal;
+    }
+  }
+}
