--- a/src/pages/Home/components/HighlightProduct/Tabs.module.scss
+++ b/src/pages/Home/components/HighlightProduct/Tabs.module.scss
@@ -27,7 +27,7 @@ button:active::before {
   width: 85%;
 }
 
-.hoverView {
+.hoverView1 {
   text-align: center;
-  margin-top: 58%;
+  margin-top: 60%;
 }
