--- a/src/assets/styles/_bases.scss
+++ b/src/assets/styles/_bases.scss
@@ -13,10 +13,6 @@ body {
   margin-right: auto;
 }
 
-// .meme1 {
-//   color: aqua;
-// }
-
-// .meme2 {
-//   color: yellow;
-// }
+input.slider {
+  width: 100%;
+}
