--- a/src/pages/Home/components/Category/Category.module.scss
+++ b/src/pages/Home/components/Category/Category.module.scss
@@ -12,17 +12,8 @@
 
 .customSlide {
   display: inline-block;
-  padding-left: 30px;
+  padding-right: 30px;
 }
-
-// .customSlide:first-child {
-//   padding-left: 0;
-// }
-
-// .customSlide:last-child {
-//   padding-right: 0; /* Slide cuối cùng sát viền phải */
-//   padding-left: 30px; /* Giữ khoảng cách với slide trước */
-// }
 
 .slick_prev {
   position: absolute;
